Dialog css fixes (#1784)
- Increase max-width of dialogs to 700px or 90% width (which ever is smaller)
- Allow dialogs to expand to 90% of the height to take advantage of extra space
- Allow extremely long content in dialogs to scroll, but not hide any bottom buttons out of the view
- Coverage & delete some CSS settings among various dialogs used
- Fix bug where non-json error details text was not formatted pretty in <ErrorDisplay>
- Fix bug that set “undefined” class in <Dialog> when not passing a `contentClass` prop.
- Add new DisplayError classes to oauth_redirect_error template
- Fix dialog button css, “x” is now centered in it’s box model
- Add viewport meta tag to force scale to 1 for mobile devices

--- a/lms/static/styles/components/_Dialog.scss
+++ b/lms/static/styles/components/_Dialog.scss
@@ -1,16 +1,11 @@
+@use "../mixins/focus";
 @use "../variables" as var;
 
 
 .Dialog__container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: fixed;
-  left: 0;
   top: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
 }
@@ -26,10 +21,14 @@
 }
 
 .Dialog__content {
+  display: flex;
+  flex-direction: column;
+  max-height: 90vh;
+  max-width: 700px; // default for older browsers
+  max-width: min(700px, 90vw);
   background-color: white;
   border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding: 20px;
 }
 
@@ -40,23 +39,21 @@
 }
 
 .Dialog__cancel-btn {
+  @include focus.outline-on-keyboard-focus;
   border: 0;
   background: none;
   color: var.$grey-6;
 
   // Given the button a large hit target and ensure the 'X' label is large
   // enough to see easily and aligned with the right edge of the dialog.
-  padding: 0;
+  // Add negative margins so that the button does not force the dialog to 
+  // grow in height.
   font-size: 20px;
-  line-height: 20px;
-  width: 40px;
-  height: 40px;
-  margin-top: -15px;
-  margin-bottom: -15px;
-  margin-right: 0;
-  text-align: right;
+  padding: 5px;
+  margin: -10px 0px;
 
   &:hover {
+    cursor: pointer;
     color: var.$brand;
   }
 }
@@ -68,6 +65,7 @@
   margin-top: 10px;
 
   .Button {
+    @include focus.outline-on-keyboard-focus;
     &:not(:first-child) {
       margin-left: 5px;
     }
